# zig-picosdk-project

./: CMakeLists.txt  README.md
cmake/: zig.cmake
lib/: picosdk.zig  rp2040.zig
src/: main.zig
